--- a/_posts/2019-08-30-UI Design.md
+++ b/_posts/2019-08-30-UI Design.md
@@ -2,7 +2,7 @@
 layout: post
 title: UI Design
 bigimg: /img/ui.png
-image: /jiqi963/Multimedia/blob/master/img/multimedia.jpg
+image: /jiqi963.github.io/Multimedia/img/multimedia.jpg
 ---
 
 # This page for Multimedia UI Design
