--- a/_posts/2019-08-30-UI Design.md
+++ b/_posts/2019-08-30-UI Design.md
@@ -8,14 +8,104 @@ image: /Multimedia/img/multimedia.jpg
 # This page for Multimedia UI Design
 All explan can find in [Here](https://github.com/SoftEnOP/soften-portfolio-jiqi963.github.io/blob/master/doc/Explanation.pdf)
 
-## Icon Design
+## Explanation
 
-![Icon 1](https://github.com/SoftEnOP/soften-portfolio-jiqi963.github.io/blob/master/img/handin/icon1.png?raw=true)
+- Which tools/applications you used and why
 
-*** 
+I going to use Photoshop which has the almost function that can help me to edit the picture.
 
-![Icon 2](https://github.com/SoftEnOP/soften-portfolio-jiqi963.github.io/blob/master/img/handin/icon2.png?raw=true)
+- How you used the features of these tools/applications
 
+I use the rectangle tool to draw input field and search bar.
+I use horizontal tool to type text such as ‘check-in, ‘check-out ‘, ‘search’.
+
+- Why you believe your use of tools/applications was competent
+
+I have some exercise in the class time and Photoshop is popular software which easier to find the tutorial in YouTube.
+
+- How you exported your work and why you did it that way
+
+I going to export a PNG file and update it in my portfolio.
+
+- How you managed assets during project work
+
+Research and aim an area (App or website)
+Draw a wireframe
+Double-check my idea with the lecturer
+mockup
+
+- How you used the elements and principles in your designs
+
+I going to design a travel app, By the way, I did some research, almost travel app have similar home page such like the city name of you are going to, check-in and check-out date, and some useful buttons.
+
+Overall, in my case there should have:
+
+###### First page (Home)
+
+`Search bar`
+type the city you are going, in the top of the screen
+Input filed: check-in, check-out date, number of room and number of people follow the search bar
+
+`Line`
+between the all input filed (etc. Check-in and check-out), easier the user to press the button.
+
+`Button`
+Try new will tells the user where just open a new hotel and you can try them first. Discount will tell the user which hotel has a lower price than normally day.
+
+`Circle buttons`
+Rent a car, public transfer, and weather.
+
+`Bottom Icon`
+Home, inbox, bookings and more. Draw a high recognition icon without text.
+
+###### Second page (show all hotel result):
+
+`Top area`
+Show the city name and the number of results, there was a button which the user can change to other currency it on the top-right.
+
+`Filter`
+this button includes a lot of useful function, such as price range, star rating (Standards of hotel classification), review score (user review) and more.
+
+`Work slider`
+slider between work and holiday, the work option will automatically sort first the hotel more suit business, like meeting room, the holiday option will sort first the hotel have a swimming pool or kids' outdoor play equipment.
+
+`Sort`
+This button can sort different type list such as lower price first or higher review first. etc.
+
+`Hotel list`
+The rectangle will include the hotel name, rating star, review score, price and hotel image, and some small label to show the feature of the hotel.
+
+`Label`
+Show the feature of the hotel such as free Wi-Fi, GYM, kitchenware.
+
+###### Third page (Hotel detail)
+
+`Top area`
+Show the hotel name and address, the date of your choice.
+
+`Mid area`
+The room type and the feature of the hotel.
+Max number of guests, the bed type.
+
+`Bottom area`
+The highlight of the hotel that the guest was given and user review.
+
+`Select button`
+Select this room and go into the confirm page.
+
+- How your designs are consistent with conventions and existing material
+
+A wide range of uses of purple and blue, most of the rectangles use round corner except the label.
+All borders have no edges, most rectangles use external shadows, and labels use bevel emboss
+Align most (99.99%) of the rectangles and text horizontally and vertically, maintaining consistent spacing
+I draw some icon such as rent car, transfer and weather.
+
+- What decisions you made about aesthetics and user experience
+User more high recognition icon.
+Use lines to make the picture clearer and the layers more distinct
+The main content is distinguished by lines and spacing.
+Align most (99.99%) of the rectangles and text horizontally and vertically, maintaining consistent spacing
+By the way, all element has color so the background I use black and white.
 
 ## Wireframe
 ![Wireframe 1](https://github.com/SoftEnOP/soften-portfolio-jiqi963.github.io/blob/master/img/handin/wire1.png?raw=true)
@@ -29,13 +119,80 @@ All explan can find in [Here](https://github.com/SoftEnOP/soften-portfolio-jiqi9
 ![Wireframe 3](https://github.com/SoftEnOP/soften-portfolio-jiqi963.github.io/blob/master/img/handin/wire3.png?raw=true)
 
 ## Final page
+
+- On the top has a search bar that can enter city name of hotel name.
+
+- The date and amount of guest in the middle area.
+
+- Try new means have new hotel just open in somewhere.
+
+- Discount means some hotel has good deal.
+
+- Rent car, public transport and weather
+
+- Home page, Inbox, calendar and more
+
 ![Page 1](https://github.com/SoftEnOP/soften-portfolio-jiqi963.github.io/blob/master/img/handin/page1.png?raw=true)
 
-***
+
+- The city name on the top, you can change to other currency by click the button on the top right corner.
+
+- Filter can chooice price range and star rating...
+
+- Work slider means you can choose work(business) or holiday, each one have different feature like children care or meeting room.
+
+- Sort means you can sort the result by price or feedback or ......
+
+- Main area show the results, it includes the image, name, price and .....
 
 ![Page 2](https://github.com/SoftEnOP/soften-portfolio-jiqi963.github.io/blob/master/img/handin/page2.png?raw=true)
 
-***
+
+- Hotel name and address show on the top.
+
+- More image for this hotel.
+
+- More feature for the hotel
+
+- Some guest feedback.
 
 ![Page 3](https://github.com/SoftEnOP/soften-portfolio-jiqi963.github.io/blob/master/img/handin/page3.png?raw=true)
 
+
+## Evidence
+
+### Icon Design
+
+I design the calendar icon for bottom area on first page
+
+![Icon 1](https://github.com/SoftEnOP/soften-portfolio-jiqi963.github.io/blob/master/img/handin/icon1.png?raw=true)
+
+I design the rent car icon for middle area on first page
+
+![Icon 2](https://github.com/SoftEnOP/soften-portfolio-jiqi963.github.io/blob/master/img/handin/icon2.png?raw=true)
+
+### Research
+
+![Research 01](https://github.com/SoftEnOP/soften-portfolio-jiqi963.github.io/blob/master/img/handin/re01.jpg?raw=true)
+
+![Research 02](https://github.com/SoftEnOP/soften-portfolio-jiqi963.github.io/blob/master/img/handin/re02.jpg?raw=true)
+
+![Research 03](https://github.com/SoftEnOP/soften-portfolio-jiqi963.github.io/blob/master/img/handin/re03.jpg?raw=true)
+
+![Research 04](https://github.com/SoftEnOP/soften-portfolio-jiqi963.github.io/blob/master/img/handin/re04.jpg?raw=true)
+
+![Research 05](https://github.com/SoftEnOP/soften-portfolio-jiqi963.github.io/blob/master/img/handin/re05.jpg?raw=true)
+
+![Research 06](https://github.com/SoftEnOP/soften-portfolio-jiqi963.github.io/blob/master/img/handin/re06.jpg?raw=true)
+
+![Research 07](https://github.com/SoftEnOP/soften-portfolio-jiqi963.github.io/blob/master/img/handin/re07.jpg?raw=true)
+
+![Research 08](https://github.com/SoftEnOP/soften-portfolio-jiqi963.github.io/blob/master/img/handin/re08.jpg?raw=true)
+
+![Research 09](https://github.com/SoftEnOP/soften-portfolio-jiqi963.github.io/blob/master/img/handin/re09.jpg?raw=true)
+
+![Research 10](https://github.com/SoftEnOP/soften-portfolio-jiqi963.github.io/blob/master/img/handin/re10.jpg?raw=true)
+
+![Research 11](https://github.com/SoftEnOP/soften-portfolio-jiqi963.github.io/blob/master/img/handin/re11.jpg?raw=true)
+
+![Research 12](https://github.com/SoftEnOP/soften-portfolio-jiqi963.github.io/blob/master/img/handin/re12.jpg?raw=true)
