--- a/_posts/2019-08-30-UI Design.md
+++ b/_posts/2019-08-30-UI Design.md
@@ -5,8 +5,9 @@ bigimg: /img/ui.png
 image: /Multimedia/img/multimedia.jpg
 ---
 
-# This page for Multimedia UI Design
-All explan can find in [Here](https://github.com/SoftEnOP/soften-portfolio-jiqi963.github.io/blob/master/doc/Explanation.pdf)
+# Topic
+
+I design a treavel app for the cellphone.
 
 ## Explanation
 
@@ -38,9 +39,23 @@ mockup
 
 I going to design a travel app, By the way, I did some research, almost travel app have similar home page such like the city name of you are going to, check-in and check-out date, and some useful buttons.
 
-Overall, in my case there should have:
+- How your designs are consistent with conventions and existing material
 
-###### First page (Home)
+A wide range of uses of purple and blue, most of the rectangles use round corner except the label.
+All borders have no edges, most rectangles use external shadows, and labels use bevel emboss
+Align most (99.99%) of the rectangles and text horizontally and vertically, maintaining consistent spacing
+I draw some icon such as rent car, transfer and weather.
+
+- What decisions you made about aesthetics and user experience
+User more high recognition icon.
+Use lines to make the picture clearer and the layers more distinct
+The main content is distinguished by lines and spacing.
+Align most (99.99%) of the rectangles and text horizontally and vertically, maintaining consistent spacing
+By the way, all element has color so the background I use black and white.
+
+## Introduce the design 
+
+#### First page (Home)
 
 `Search bar`
 type the city you are going, in the top of the screen
@@ -58,7 +73,7 @@ Rent a car, public transfer, and weather.
 `Bottom Icon`
 Home, inbox, bookings and more. Draw a high recognition icon without text.
 
-###### Second page (show all hotel result):
+#### Second page (show all hotel result):
 
 `Top area`
 Show the city name and the number of results, there was a button which the user can change to other currency it on the top-right.
@@ -78,7 +93,7 @@ The rectangle will include the hotel name, rating star, review score, price and 
 `Label`
 Show the feature of the hotel such as free Wi-Fi, GYM, kitchenware.
 
-###### Third page (Hotel detail)
+#### Third page (Hotel detail)
 
 `Top area`
 Show the hotel name and address, the date of your choice.
@@ -93,19 +108,6 @@ The highlight of the hotel that the guest was given and user review.
 `Select button`
 Select this room and go into the confirm page.
 
-- How your designs are consistent with conventions and existing material
-
-A wide range of uses of purple and blue, most of the rectangles use round corner except the label.
-All borders have no edges, most rectangles use external shadows, and labels use bevel emboss
-Align most (99.99%) of the rectangles and text horizontally and vertically, maintaining consistent spacing
-I draw some icon such as rent car, transfer and weather.
-
-- What decisions you made about aesthetics and user experience
-User more high recognition icon.
-Use lines to make the picture clearer and the layers more distinct
-The main content is distinguished by lines and spacing.
-Align most (99.99%) of the rectangles and text horizontally and vertically, maintaining consistent spacing
-By the way, all element has color so the background I use black and white.
 
 ## Wireframe
 ![Wireframe 1](https://github.com/SoftEnOP/soften-portfolio-jiqi963.github.io/blob/master/img/handin/wire1.png?raw=true)
@@ -118,7 +120,7 @@ By the way, all element has color so the background I use black and white.
 
 ![Wireframe 3](https://github.com/SoftEnOP/soften-portfolio-jiqi963.github.io/blob/master/img/handin/wire3.png?raw=true)
 
-## Final page
+## Final product
 
 - On the top has a search bar that can enter city name of hotel name.
 
@@ -196,3 +198,8 @@ I design the rent car icon for middle area on first page
 ![Research 11](https://github.com/SoftEnOP/soften-portfolio-jiqi963.github.io/blob/master/img/handin/re11.jpg?raw=true)
 
 ![Research 12](https://github.com/SoftEnOP/soften-portfolio-jiqi963.github.io/blob/master/img/handin/re12.jpg?raw=true)
+
+
+#### Explanation 
+
+An explanation can find in [Here](https://github.com/SoftEnOP/soften-portfolio-jiqi963.github.io/blob/master/doc/Explanation.pdf)
